k8s/database/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.35
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
